RESOLVED FIXED39441
saveAndSetNewPortStateForUpdate sometimes sets an incorrect window.height property
https://bugs.webkit.org/show_bug.cgi?id=39441
Summary saveAndSetNewPortStateForUpdate sometimes sets an incorrect window.height pro...
Kevin Decker
Reported 2010-05-20 13:03:39 PDT
I noticed through code inspection that saveAndSetNewPortStateForUpdate sometimes sets an incorrect window.height property. This will break plug-ins at non 1.0 scale factors.
Attachments
proposed fix (2.46 KB, patch)
2010-05-20 13:06 PDT, Kevin Decker
no flags
now with 64-bit OOP fixes (3.96 KB, patch)
2010-05-20 14:38 PDT, Kevin Decker
andersca: review+
Kevin Decker
Comment 1 2010-05-20 13:06:28 PDT
Created attachment 56623 [details] proposed fix
Kevin Decker
Comment 2 2010-05-20 14:38:10 PDT
Created attachment 56633 [details] now with 64-bit OOP fixes
Anders Carlsson
Comment 3 2010-05-20 14:40:13 PDT
Comment on attachment 56633 [details] now with 64-bit OOP fixes r=me
Note You need to log in before you can comment on or make changes to this bug.